# ogl-test

./: CMakeLists.txt  README.md
src/: config.h  main.cpp
src/assets/: castle.gltf
src/core/: Callbacks.cpp  Callbacks.h  Camera.cpp  Camera.h  Engine.cpp  Engine.h  Input.cpp  Input.h  State.h
src/math/: GeometryUtils.cpp  GeometryUtils.h  Octree.cpp  Octree.h
src/render/: Animation.cpp  Animation.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  ShadowMap.cpp  ShadowMap.h
src/scene/: Scene.cpp  Scene.h  SceneObject.h
src/utils/: RenderUtils.cpp  RenderUtils.h
